src/objects/Education__c.object
<CustomObject>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Educations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Education</label>
    <nameField>
        <displayFormat>ED-{0000}</displayFormat>
        <label>Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Educations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>